--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- DE JUISTE TEKST (MODEL) -->
 <script>
 const correctText = `
-Hier ai commencé ma journée très tôt. 
+Hier j'ai commencé ma journée très tôt. 
 Je me suis réveillé avant le soleil. 
 Ensuite, j'ai préparé mon petit-déjeuner. 
 Ma sœur s'est levée un peu plus tard. 
@@ -86,7 +86,7 @@ Avant de dormir, j'ai envoyé un message à mes amis pour leur dire bonne nuit.
 <script>
 // Foutieve versie (kan je aanpassen)
 const startText = `
-Hier ai commencer ma journée très tôt. 
+Hier j'ai commencée ma journée très tôt. 
 Je me suis réveiller avant le soleil. 
 Ensuite, j'ai preparer mon petit-déjeuner. 
 Ma sœur s'est lever un peu plus tard. 
