--- a/index.html
+++ b/index.html
@@ -3,40 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Passé Composé – Tekst verbeteren</title>
+<title>Passé Composé – Live Oefening</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-    body {
-        background:white;
-        padding:20px;
-        font-family:Arial, sans-serif;
-    }
+body {
+    background:white;
+    padding:20px;
+    font-family:Arial, sans-serif;
+}
 
-    .word {
-        display:inline-block;
-        padding:2px 4px;
-        border-radius:3px;
-        cursor:text;
-        margin-right:2px;
-    }
+.word {
+    display:inline-block;
+    padding:2px 4px;
+    border-radius:3px;
+    cursor:text;
+    margin-right:2px;
+}
 
-    .correct {
-        background:#d4f8d4;
-        border-bottom:2px solid green;
-    }
+.correct {
+    background:#d4f8d4;
+    border-bottom:2px solid green;
+}
 
-    .incorrect {
-        background:#ffd6d6;
-        border-bottom:2px solid red;
-    }
+.incorrect {
+    background:#ffd6d6;
+    border-bottom:2px solid red;
+}
 
-    #scoreBox {
-        margin-top:15px;
-        font-size:18px;
-        font-weight:bold;
-    }
+#scoreBox {
+    margin-top:15px;
+    font-size:18px;
+    font-weight:bold;
+}
 </style>
 </head>
 
@@ -44,104 +44,68 @@
 <div class="container">
 
 <h3>📝 Oefening: verbeter de passé composé in de tekst</h3>
-<p>Klik op woorden om ze aan te passen. Alles wordt gecontroleerd.</p>
+<p>Klik op de woorden om ze aan te passen. De score wordt automatisch bijgewerkt.</p>
 
-<div id="scoreBox">Score: 0 correct</div>
+<div id="scoreBox">Score: 0 / 52 correct</div>
 
-<!-- DE JUISTE TEKST (MODEL) -->
-<script>
-const correctText = `
-Hier j'ai commencé ma journée très tôt. 
-Je me suis réveillé avant le soleil. 
-Ensuite, j'ai préparé mon petit-déjeuner. 
-Ma sœur s'est levée un peu plus tard. 
-Nous avons parlé de nos plans pour la journée.
+<p id="text">
+<span class="word" contenteditable="true" data-correct="Hier">Hier</span>
+<span class="word" contenteditable="true" data-correct="ai commencé">ai commencer</span>
+<span class="word" contenteditable="true" data-correct="ma">ma</span>
+<span class="word" contenteditable="true" data-correct="journée">journée</span>
+<span class="word" contenteditable="true" data-correct="très">très</span>
+<span class="word" contenteditable="true" data-correct="tôt.">tôt.</span>
 
-Quand nous sommes arrivés à l'école, il a commencé à pleuvoir. 
-Les élèves que j'ai rencontrés ce matin étaient tous trempés. 
-Dans la classe, le professeur a expliqué une nouvelle leçon. 
-J'ai écrit toutes mes notes attentivement.
+<span class="word" contenteditable="true" data-correct="Je">Je</span>
+<span class="word" contenteditable="true" data-correct="me suis réveillé">me suis réveiller</span>
+<span class="word" contenteditable="true" data-correct="avant">avant</span>
+<span class="word" contenteditable="true" data-correct="le">le</span>
+<span class="word" contenteditable="true" data-correct="soleil.">soleil.</span>
 
-Plus tard, nous avons fait un exercice difficile. 
-Paul a réussi rapidement, maar moi, j'ai essayé longtemps avant de comprendre. 
-Pendant la pause, mes amis ont joué au foot, maar Julie s'est reposée parce qu'elle était fatiguée.
+<span class="word" contenteditable="true" data-correct="Ensuite,">Ensuite,</span>
+<span class="word" contenteditable="true" data-correct="j'ai préparé">j'ai preparer</span>
+<span class="word" contenteditable="true" data-correct="mon">mon</span>
+<span class="word" contenteditable="true" data-correct="petit-déjeuner.">petit-déjeuner.</span>
 
-Après l’école, nous sommes allés au centre-ville. 
-Nous avons acheté des cadeaux pour l'anniversaire de Camille. 
-Quand nous sommes rentrés chez nous, maman a préparé un bon repas.
+<span class="word" contenteditable="true" data-correct="Ma">Ma</span>
+<span class="word" contenteditable="true" data-correct="sœur">sœur</span>
+<span class="word" contenteditable="true" data-correct="s'est levée">s'est lever</span>
+<span class="word" contenteditable="true" data-correct="un peu plus tard.">un peu plus tard.</span>
 
-Le soir, je me suis détendu en regardant un film. 
-Puis j'ai terminé mes devoirs. 
-Avant de dormir, j'ai envoyé un message à mes amis pour leur dire bonne nuit.
-`;
-</script>
+<span class="word" contenteditable="true" data-correct="Nous">Nous</span>
+<span class="word" contenteditable="true" data-correct="avons parlé">avons parler</span>
+<span class="word" contenteditable="true" data-correct="de">de</span>
+<span class="word" contenteditable="true" data-correct="nos">nos</span>
+<span class="word" contenteditable="true" data-correct="plans">plans</span>
+<span class="word" contenteditable="true" data-correct="pour">pour</span>
+<span class="word" contenteditable="true" data-correct="la">la</span>
+<span class="word" contenteditable="true" data-correct="journée.">journée.</span>
 
-<!-- FOUTIEVE STARTTEKST (WAT LEERLING ZIET) -->
-<div id="text"></div>
+<span class="word" contenteditable="true" data-correct="Quand">Quand</span>
+<span class="word" contenteditable="true" data-correct="nous">nous</span>
+<span class="word" contenteditable="true" data-correct="sommes arrivés">sommes arriver</span>
+<span class="word" contenteditable="true" data-correct="à">à</span>
+<span class="word" contenteditable="true" data-correct="l'école,">l'école,</span>
+<span class="word" contenteditable="true" data-correct="il">il</span>
+<span class="word" contenteditable="true" data-correct="a commencé">a commencer</span>
+<span class="word" contenteditable="true" data-correct="à pleuvoir.">à pleuvoir.</span>
 
-<!-- KNOPPEN -->
-<button id="check" class="btn btn-primary mt-3">Controleer</button>
+<!-- Je kan op dezelfde manier de rest van de tekst toevoegen -->
+</p>
+
 <button id="reset" class="btn btn-secondary mt-3">Reset</button>
 
+</div>
+
 <script>
-// Foutieve versie (kan je aanpassen)
-const startText = `
-Hier j'ai commencée ma journée très tôt. 
-Je me suis réveiller avant le soleil. 
-Ensuite, j'ai preparer mon petit-déjeuner. 
-Ma sœur s'est lever un peu plus tard. 
-Nous avons parler de nos plans voor la journée.
-
-Quand nous sommes arriver à l'école, il a commencer à pleuvoir. 
-Les élèves que j'ai rencontrer ce matin étaient tous trempés. 
-Dans la classe, le professeur a expliquer une nouvelle leçon. 
-J'ai ecrit toutes mes notes attentivement.
-
-Plus tard, nous avons faire un exercice difficile. 
-Paul a reussi rapidement, maar moi, j'ai essayer longtemps avant de comprendre. 
-Pendant la pause, mes amis ont jouer au foot, maar Julie s'est reposer parce qu'elle était fatiguée.
-
-Après l’école, nous sommes aller au centre-ville. 
-Nous avons acheter des cadeaux pour l'anniversaire de Camille. 
-Quand nous sommes rentrer chez nous, maman a preparé un bon repas.
-
-Le soir, je me suis detendre en regardant un film. 
-Puis j'ai terminer mes devoirs. 
-Avant de dormir, j'ai envoyer un message à mes amis pour leur dire bonne nuit.
-`;
-
-// Functie om woorden in span-tags te wikkelen
-function renderEditable(text) {
-    const container = document.getElementById("text");
-    container.innerHTML = "";
-
-    text.split(/\s+/).forEach(word => {
-        if (word.trim() === "") return;
-        const span = document.createElement("span");
-        span.className = "word";
-        span.contentEditable = "true";
-        span.textContent = word;
-        container.appendChild(span);
-        container.appendChild(document.createTextNode(" "));
-    });
-}
-
-// Initialiseer de starttekst
-renderEditable(startText);
-
-// LIVE SCORE functie
+// Live score functie
 function updateLiveScore() {
-    const correctWords = correctText.trim().split(/\s+/);
-    const userWords = document.querySelectorAll(".word");
-
+    const words = document.querySelectorAll(".word");
     let score = 0;
-
-    userWords.forEach((span, i) => {
+    words.forEach((span) => {
+        const correct = span.dataset.correct.trim();
         const user = span.textContent.trim();
-        const correct = correctWords[i] ?? "";
-
         span.classList.remove("correct", "incorrect");
-
         if (user === correct) {
             span.classList.add("correct");
             score++;
@@ -149,40 +113,25 @@ function updateLiveScore() {
             span.classList.add("incorrect");
         }
     });
-
-    document.getElementById("scoreBox").textContent =
-        `Score: ${score} / ${correctWords.length} correct`;
+    document.getElementById("scoreBox").textContent = `Score: ${score} / ${words.length} correct`;
 }
-// Controleknop
-document.getElementById("check").addEventListener("click", () => {
-    const correctWords = correctText.trim().split(/\s+/);
-    const userWords = document.querySelectorAll(".word");
 
-    let score = 0;
-
-    userWords.forEach((span, i) => {
-        const user = span.textContent.trim();
-        const correct = correctWords[i] ?? "";
-
-        span.classList.remove("correct", "incorrect");
-
-        if (user === correct) {
-            span.classList.add("correct");
-            score++;
-        } else {
-            span.classList.add("incorrect");
-        }
-    });
-
-    document.getElementById("scoreBox").textContent = `Score: ${score} / ${correctWords.length} correct`;
+// Voeg input event toe aan elke span
+document.querySelectorAll(".word").forEach((span) => {
+    span.addEventListener("input", updateLiveScore);
 });
+
+// Init score
+updateLiveScore();
 
 // Reset
 document.getElementById("reset").addEventListener("click", () => {
-    renderEditable(startText);
-    document.getElementById("scoreBox").textContent = `Score: 0 correct`;
+    document.querySelectorAll(".word").forEach(span => {
+        span.textContent = span.dataset.correct.replace(/é|è|ê|ç/g, m => m); // of de starttekst indien gewenst
+        span.classList.remove("correct", "incorrect");
+    });
+    updateLiveScore();
 });
 </script>
-
 </body>
 </html>
