--- a/index.html
+++ b/index.html
@@ -1,69 +1,112 @@
-import { useState } from "react";
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Oefening – Imparfait</title>
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-white text-gray-900 font-sans p-4">
 
-const sentences = [
-  { text: ["Quand j’", "à l’école."], answers: ["avais", "arrivé"], explanation: "Ik was aangekomen (avais arrivé) op school." },
-  { text: ["Elle", "son livre avant de dormir."], answers: ["avait", "lu"], explanation: "Ze had haar boek gelezen (avait lu) voordat ze ging slapen." },
-  { text: ["Nous", "le dîner avant qu’il n’arrive."], answers: ["avions", "préparé"], explanation: "Wij hadden het avondeten klaargemaakt (avions préparé) voordat hij arriveerde." },
-  { text: ["Ils", "la lettre avant de partir."], answers: ["avaient", "envoyé"], explanation: "Ze hadden de brief verstuurd (avaient envoyé) voor ze vertrokken." },
-  { text: ["Tu", "le film avant que je vienne."], answers: ["avais", "regardé"], explanation: "Je had de film gekeken (avais regardé) voor ik kwam." },
-  { text: ["Je", "mes devoirs avant le dîner."], answers: ["avais", "fait"], explanation: "Ik had mijn huiswerk gemaakt (avais fait) voor het diner." },
-  { text: ["Marie", "heureuse quand elle a vu son cadeau."], answers: ["avait", "été"], explanation: "Marie was blij geweest (avait été) toen ze haar cadeau zag." },
-  { text: ["Nous", "la maison avant l’orage."], answers: ["avions", "nettoyé"], explanation: "We hadden het huis schoongemaakt (avions nettoyé) voor de storm." },
-  { text: ["Ils", "le gâteau avant l’arrivée des invités."], answers: ["avaient", "préparé"], explanation: "Ze hadden de taart klaargemaakt (avaient préparé) voor de gasten arriveerden." },
-  { text: ["Je", "la fenêtre avant qu’il pleuve."], answers: ["avais", "fermée"], explanation: "Ik had het raam gesloten (avais fermée) voor het begon te regenen." },
-  { text: ["Tu", "ton manteau avant de sortir."], answers: ["avais", "mis"], explanation: "Je had je jas aangedaan (avais mis) voor je naar buiten ging." },
-  { text: ["Elle", "ses clés avant de partir."], answers: ["avait", "pris"], explanation: "Ze had haar sleutels gepakt (avait pris) voor ze vertrok." },
-  { text: ["Nous", "la voiture avant de partir."], answers: ["avions", "lavé"], explanation: "We hadden de auto gewassen (avions lavé) voordat we vertrokken." },
-  { text: ["Ils", "le cadeau avant l’anniversaire."], answers: ["avaient", "acheté"], explanation: "Ze hadden het cadeau gekocht (avaient acheté) voor de verjaardag." },
-  { text: ["Je", "la lettre avant qu’elle arrive."], answers: ["avais", "écrit"], explanation: "Ik had de brief geschreven (avais écrit) voor zij arriveerde." }
-];
+<div class="max-w-3xl mx-auto">
 
-export default function PlusQueParfaitExercise() {
-  const [inputs, setInputs] = useState(sentences.map(s => Array(s.answers.length).fill("")));
-  const [score, setScore] = useState(0);
+  <h1 class="text-2xl font-bold mb-4">Oefening – Imparfait</h1>
 
-  const handleChange = (sentenceIdx, wordIdx, value) => {
-    const newInputs = [...inputs];
-    newInputs[sentenceIdx][wordIdx] = value;
-    setInputs(newInputs);
+  <!-- Score -->
+  <div id="scoreBox" class="mb-4 font-semibold">Score: 0 / 5</div>
 
-    let correctCount = 0;
-    newInputs.forEach((words, idx) => {
-      if(words.every((w, i) => w.toLowerCase().trim() === sentences[idx].answers[i])) correctCount++;
-    });
-    setScore(correctCount);
-  };
-
-  const reset = () => {
-    setInputs(sentences.map(s => Array(s.answers.length).fill("")));
-    setScore(0);
-  };
-
-  return (
-    <div className="p-4 max-w-4xl mx-auto">
-      <h2 className="text-2xl font-bold mb-4">Oefening: Plus-que-parfait</h2>
-      <div className="mb-4 font-semibold">Score: {score} / {sentences.length}</div>
-
-      {sentences.map((s, idx) => (
-        <div key={idx} className="flex flex-wrap items-center gap-2 mb-3">
-          <span>{s.text[0]}</span>
-          {s.answers.map((_, i) => (
-            <input
-              key={i}
-              className={`border p-1 w-28 ${inputs[idx][i] === s.answers[i] ? 'border-green-500 bg-green-100' : ''}`}
-              value={inputs[idx][i]}
-              onChange={e => handleChange(idx, i, e.target.value)}
-            />
-          ))}
-          <span>{s.text[1]}</span>
-          {inputs[idx].every((w,i) => w.toLowerCase().trim() === s.answers[i]) && (
-            <div className="text-green-700 text-sm ml-2">{s.explanation}</div>
-          )}
-        </div>
-      ))}
-
-      <button onClick={reset} className="mt-4 px-3 py-2 bg-gray-300 rounded hover:bg-gray-400">Reset</button>
+  <!-- Oefening -->
+  <div class="space-y-4">
+    <div class="flex flex-wrap items-center gap-2">
+      <span>Quand j’</span>
+      <input type="text" class="border border-gray-300 p-1 w-32 rounded" data-answer="étais" placeholder="être">
+      <span>petit, j’aimais les dessins animés.</span>
     </div>
-  );
+
+    <div class="flex flex-wrap items-center gap-2">
+      <span>Il</span>
+      <input type="text" class="border border-gray-300 p-1 w-32 rounded" data-answer="faisait" placeholder="faire">
+      <span>très froid en hiver.</span>
+    </div>
+
+    <div class="flex flex-wrap items-center gap-2">
+      <span>Nous</span>
+      <input type="text" class="border border-gray-300 p-1 w-32 rounded" data-answer="jouions" placeholder="jouer">
+      <span>au football tous les mercredis.</span>
+    </div>
+
+    <div class="flex flex-wrap items-center gap-2">
+      <span>Tu</span>
+      <input type="text" class="border border-gray-300 p-1 w-32 rounded" data-answer="mangeais" placeholder="manger">
+      <span>souvent des crêpes, non ?</span>
+    </div>
+
+    <div class="flex flex-wrap items-center gap-2">
+      <span>Le chat</span>
+      <input type="text" class="border border-gray-300 p-1 w-32 rounded" data-answer="dormait" placeholder="dormir">
+      <span>sur le canapé.</span>
+    </div>
+  </div>
+
+  <!-- Knoppen -->
+  <div class="mt-4 flex gap-2">
+    <button id="checkBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Controleer</button>
+    <button id="resetBtn" class="bg-gray-300 px-4 py-2 rounded hover:bg-gray-400">Reset</button>
+    <button id="showAnswersBtn" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Toon antwoorden</button>
+  </div>
+
+</div>
+
+<script>
+const inputs = document.querySelectorAll('input[data-answer]');
+const scoreBox = document.getElementById('scoreBox');
+
+function updateScore() {
+  let correct = 0;
+  inputs.forEach(input => {
+    if(input.value.trim().toLowerCase() === input.dataset.answer.toLowerCase()) correct++;
+  });
+  scoreBox.textContent = `Score: ${correct} / ${inputs.length}`;
 }
+
+// Controleer antwoorden
+document.getElementById('checkBtn').addEventListener('click', () => {
+  inputs.forEach(input => {
+    const val = input.value.trim().toLowerCase();
+    const ans = input.dataset.answer.toLowerCase();
+    if(val === ans){
+      input.classList.remove('border-red-500','bg-red-100');
+      input.classList.add('border-green-500','bg-green-100');
+    } else {
+      input.classList.remove('border-green-500','bg-green-100');
+      input.classList.add('border-red-500','bg-red-100');
+    }
+  });
+  updateScore();
+});
+
+// Reset
+document.getElementById('resetBtn').addEventListener('click', () => {
+  inputs.forEach(input => {
+    input.value = '';
+    input.classList.remove('border-green-500','bg-green-100','border-red-500','bg-red-100');
+  });
+  updateScore();
+});
+
+// Toon antwoorden
+document.getElementById('showAnswersBtn').addEventListener('click', () => {
+  inputs.forEach(input => {
+    input.value = input.dataset.answer;
+    input.classList.remove('border-red-500','bg-red-100');
+    input.classList.add('border-green-500','bg-green-100');
+  });
+  updateScore();
+});
+
+</script>
+
+</body>
+</html>
+
 
